# TurboQuant-VectorDB

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench.py
docs/: CODE_WALKTHROUGH.md  CONCEPTS.md
examples/: quickstart.py
tests/: test_indexes.py  test_kmeans.py  test_quantizers.py
turboquant/: __init__.py  datasets.py  kmeans.py  metrics.py
turboquant/index/: __init__.py  flat.py  ivfpq.py  turbo.py
turboquant/quantizers/: __init__.py  adaptive.py  base.py  product.py  scalar.py
